# rust-blogpost-web-app

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: backend.rs  blogpost.rs  db.rs  error.rs  main.rs
templates/: base.html
