[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["multipart"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.213", features = ["derive"] }
rusqlite = { version = "0.32.0", features = ["bundled", "chrono"] }
tokio = { version = "1.41.0", features = ["full"] }
askama = "0.12.1"
url = "2.5.2"
reqwest = "0.12.8"
base64 = "0.22.1"
log = "0.4.22"
env_logger = "0.11.5"
image = "0.25.4"
tower = "0.5.1"

[dev-dependencies]
mockito = "1.5.0"

